force-app/main/default/objects/Costar_Report__c/Costar_Report__c.object-meta.xml
<CustomObject>
    <label>Costar Report</label>
    <nameField>
        <label>Costar Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costar Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>