force-app/main/default/objects/Costar_Report__c/fields/Attachment_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Location_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Attachment_Id__c  , Attachment_Name__c  ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Link</label>
    <type>Text</type>
</CustomField>