force-app/main/default/objects/Costar_Report__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>