force-app/main/default/objects/Costar_Report__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Costar Reports</relationshipLabel>
    <relationshipName>Costar_Reports1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>