force-app/main/default/objects/Costar_Report__c/fields/Costar_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Costar_Report_Date__c</fullName>
    <label>Costar Report Date</label>
    <type>Date</type>
</CustomField>